--- a/jira/src/styles/style.css
+++ b/jira/src/styles/style.css
@@ -6,7 +6,7 @@
   }
   
   /* Sider Bar */
-  .sideBar {
+  /* .sideBar {
     position: fixed;
     height: 100vh;
     z-index: 10;
@@ -83,13 +83,12 @@
   .sideBar .sideBar-icon:not(:first-child) {
     padding: 0 30%;
     height: 30px;
-  }
+  } */
   
   /* Menu */
   .menu {
     height: 100vh;
     width: 18%;
-    margin-left: 4%;
     background-color: #f4f5f7;
   }
   
