[CREATE TASK DONE]

--- a/jira/src/styles/style.css
+++ b/jira/src/styles/style.css
@@ -461,3 +461,11 @@
   .logged, .estimate-time{
     font-size: 14px;
   }
+
+  ul.ant-menu.ant-menu-root {
+    height: 100vh;
+  }
+
+  .active {
+    color: red!important;
+  }
